--- a/css/style.css
+++ b/css/style.css
@@ -121,5 +121,10 @@ h1 {
   text-decoration: underline;
   background-color: cornflowerblue;
 }
+.imagenMotor
+{
+  height: 500px;
+  width: 500px;
+}
 
 /*# sourceMappingURL=style.css.map */
